appId: net.givtapp.ios.test
name: When logged in this is how you delete an user

env:
    PASSWORD: Test123
---
- tapOn:
    label: "Click on the menu icon"
    point: "6%,9%"
- tapOn:
    text: "Terminate account"
- tapOn: 
    text: "Password"
    optional: true
- inputText:
    label: Enter the test user's Password
    text: ${PASSWORD}
    optional: true
- tapOn:
    text: "Login"
    index: 1  
    optional: true  
- tapOn: 
    label: Agree that you understand the terms
    text: "0"
- tapOn: "Terminate my account"
- assertVisible: "We're sad to see you leave\n and we hope to see you again."
- assertVisible: "Let's go!"