appId: net.givtapp.ios.test
name: Finish registration for UK user

env:
    FIRSTNAME: Automate
    LASTNAME: with Maestro
    PASSWORD: Test123
    STREETNUMBER: Buckingham Palace
    POSTALCODE: SW1A 1AA
    CITY: London
    PHONENUMBER: 4912345678
    SORTCODE: 100000
    BANKACCOUNTNUMBER: 31510604

---
- tapOn:
    label: "Open the menu"
    point: "6%,9%"
- tapOn: "Finish registration"
- tapOn: "First name"
- inputText:
    label: "Enter the test user's Firstname"
    text: ${FIRSTNAME}
- tapOn: "Surname"
- inputText:
    label: "Enter the test user's Surname"
    text: ${LASTNAME}
- tapOn: "Password"
- inputText:
    label: "Enter the test user's Password"
    text: ${PASSWORD}
- tapOn: "0"
- tapOn: "Next"
- tapOn: "Street name and number"
- inputText:
    label: "Enter the test user's Street + Number"
    text: ${STREETNUMBER}
- tapOn: "Postal Code"
- inputText:
    label: "Enter Postal Code"
    text: ${POSTALCODE}
- tapOn: "City/Town"
- inputText:
    label: "Enter City/Town"
    text: ${CITY}
- tapOn: "Mobile number"
- inputText:
    label: "Enter Phonenumber"
    text: ${PHONENUMBER}
- "scroll"
- tapOn: "Sort code"
    #label: "Sort code"
    #point: "46%,56%"
- inputText:
    label: "Enter sort code"
    text: ${SORTCODE}
- "scroll"
- tapOn: "Bank account number"
- inputText:
    label: "Enter bank account number"
    text: ${BANKACCOUNTNUMBER}
- tapOn: "Next"
- tapOn: "0"
- tapOn: "Continue"
- tapOn:
    label: "Switch Gift Aid on"
    text: "0"
- tapOn: "Save"
- tapOn: "Continue"
