appId: net.givtapp.ios.test
#env:
#    USERNAME: donna+maestrous@givtapp.net
#    PASSWORD: Test123
#    PARENT_FIRSTNAME: Automate
#    PARENT_LASTNAME: with Maestro
#    KIDSNAME: Awesome

---
- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: 
        text: "Start your journey of generosity!"
    timeout: 10000
- tapOn: "Start your journey of generosity!"
- tapOn:
    id: "icon-FontAwesomeSolid-62845"
- tapOn: "United States of America"
- tapOn: "By continuing you agree to our terms and conditions."
- assertVisible: '.*GIVT INC.*'
- tapOn:
    label: Close the popup
    point: "94%,10%"
- tapOn: "Parent email address"
- inputText:
    label: Enter the test user's Email
    text: ${USERNAME}
- tapOn: "Continue.*"
- tapOn: "Parent first name"
- inputText: ${PARENT_FIRSTNAME}
- tapOn: "Parent last name"
- inputText: ${PARENT_LASTNAME}
- tapOn: "Mobile number"
- inputText: "9876543210"
- tapOn: "Password"
- inputText:
    label: Enter the test user's Password
    text: ${PASSWORD}
- tapOn:
    label: Hide the keyboard
    point: "95%, 59%"
- tapOn: "0"
- tapOn: "Continue"
- tapOn: "Continue.*"
- tapOn: "First name"
- inputText: 
    label: Enter the kids name
    text: ${KIDSNAME}
- tapOn: "Age"
- inputText: "9"
- tapOn:
    label: Click on profile image
    point: "50%,36%"
- tapOn:
    id: "Hero2.svg"
- tapOn: "Save.*"
- tapOn: "Done"
- tapOn:
    label: Skip the 'hear about Givt' question
    text: "Skip"
- tapOn:
    label: Skip the tutorial mission
    text: "Skip"