appId: net.givtapp.ios.test
name: When logged in this is how you delete a user

env:
    PASSWORD: Test123
---
- tapOn:
    id: "gear_icon"
- runFlow: login_AuthNeeded.yml
- tapOn: ".*Terminate account"
- tapOn: "terminateAccountCheckbox"
- tapOn:
    text: "Terminate account"
    index: 1
- assertVisible: "We're sad to see you leave.*"
- assertVisible: "Let's go!"