appId: net.givtapp.ios.test
name: Login with an existing account.

---
- launchApp:
    clearState: true
- tapOn:
    id: "icon-FontAwesomeSolid-62845"
- tapOn: "United States of America"
- tapOn: "Parent email address"
- inputText: 
    label: Enter the test user's Email
    text: ${USERNAME}
- tapOn: "Continue.*"
- tapOn: "Password"
- inputText: 
    label: Enter the test user's Password
    text: ${PASSWORD}
- tapOn: 
    text: "Login"
    index: 1